--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "backend",
+  "name": "twitter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "true"
-  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
-    "node-cron": "^3.0.3",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0"
   }
 }
